--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 <body>
   <br>
   <div class="float-right">
-    <div onclick="appReset()" class="btn o_secundary btn-sm">Hard reset</div>
     <div class="onoffswitch" style="display:inline-block;margin: 10px;" title="change theme">
-      <input onclick="switchThemeClick()" type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="themeSwitcher" >
+      <input onclick="switchThemeClick()" type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="themeSwitcher">
       <label class="onoffswitch-label" for="themeSwitcher"></label>
     </div>
   </div>
@@ -36,70 +35,85 @@
   <div class="row">
     <div class="col-lg-5">
       <div class="card">
+        <nav>
+          <div class="nav nav-tabs" id="nav-tab" role="tablist">
+            <a class="nav-item nav-link active" id="nav-wallet-tab" data-toggle="tab" href="#nav-wallet" role="tab" aria-controls="nav-wallet" aria-selected="true">Wallet</a>
+            <a class="nav-item nav-link" id="nav-backup-tab" data-toggle="tab" href="#nav-backup" role="tab" aria-controls="nav-backup" aria-selected="false">Backup</a>
+            <a class="nav-item nav-link" id="nav-settings-tab" data-toggle="tab" href="#nav-settings" role="tab" aria-controls="nav-settings" aria-selected="false">Settings</a>
+          </div>
+        </nav>
         <div class="card-body">
-          <h5 class="card-title">Wallet</h5>
-          <hr>
-          <input id="passphrase" type="password" class="form-control" placeholder="encryption passphrase">
-          <a onclick="newWallet()" class="btn btn-primary o_primary float-right">New Wallet</a>
-          <p class="card-text">Create a new wallet with one identity</p>
-          <br>
+          <div class="tab-content" id="nav-tabContent">
+            <div class="tab-pane fade show active" id="nav-wallet" role="tabpanel" aria-labelledby="nav-wallet-tab">
+              <h5 class="card-title">Wallet</h5>
+              <hr>
+              <input id="kc-passphrase" type="password" class="form-control" placeholder="keyContainer encryption passphrase">
+              <a onclick="newWallet()" class="btn btn-primary o_primary float-right">New Wallet</a>
+              <p class="card-text">Create a new wallet with one identity</p>
+              <br>
 
-          <div class="row">
-            <span class="col-sm-3">seed:</span>
-            <textarea id="masterSeed-result" rows="2" cols="80"
-              class="textarea-blue col-sm-9" onclick="selectAndCopy(this)"
-              placeholder="seed" readonly="readonly"></textarea>
-          </div>
-          <div class="row">
-            <span class="col-sm-3">addrKOp:</span>
-            <textarea id="keyAddressOp-result" rows="1" cols="80"
-              class="textarea-blue col-sm-9" onclick="selectAndCopy(this)"
-              placeholder="addrKOp" readonly="readonly"></textarea>
-          </div>
-          <div class="row">
-            <span class="col-sm-3">pubKOp:</span>
-            <textarea id="keyPublicOp-result" rows="1" cols="80"
-              class="textarea-blue col-sm-9" onclick="selectAndCopy(this)"
-              placeholder="pubKOp" readonly="readonly"></textarea>
-          </div>
-          <div class="row">
-            <span class="col-sm-3">kRec:</span>
-            <textarea id="keyRecover-result" rows="1" cols="80"
-              class="textarea-blue col-sm-9" onclick="selectAndCopy(this)"
-              placeholder="kRec" readonly="readonly"></textarea>
-          </div>
-          <div class="row">
-            <span class="col-sm-3">kRev:</span>
-            <textarea id="keyRevoke-result" rows="1" cols="80"
-              class="textarea-blue col-sm-9" onclick="selectAndCopy(this)"
-              placeholder="kRev" readonly="readonly"></textarea>
-          </div>
-          <div class="row">
-            <span class="col-sm-3">idAddr:</span>
-            <textarea id="idaddr-result" rows="1" cols="80"
-              class="textarea-blue col-sm-9" onclick="selectAndCopy(this)"
-              placeholder="idAddr" readonly="readonly"></textarea>
-          </div>
-          <div class="row">
-            <span class="col-sm-3">proofKSign:</span>
-            <textarea id="proofClaimOperationalKey-result" rows="3" cols="80"
-              class="textarea-blue col-sm-9" onclick="selectAndCopy(this)"
-              placeholder="proof of ClaimAuthorizeOperationalKey" readonly="readonly"></textarea>
-          </div>
-          <br>
+              <div class="row">
+                <span class="col-sm-3">seed:</span>
+                <textarea id="masterSeed-result" rows="2" cols="80" class="textarea-blue col-sm-9" onclick="selectAndCopy(this)" placeholder="seed" readonly="readonly"></textarea>
+              </div>
+              <div class="row">
+                <span class="col-sm-3">addrKOp:</span>
+                <textarea id="keyAddressOp-result" rows="1" cols="80" class="textarea-blue col-sm-9" onclick="selectAndCopy(this)" placeholder="addrKOp" readonly="readonly"></textarea>
+              </div>
+              <div class="row">
+                <span class="col-sm-3">pubKOp:</span>
+                <textarea id="keyPublicOp-result" rows="1" cols="80" class="textarea-blue col-sm-9" onclick="selectAndCopy(this)" placeholder="pubKOp" readonly="readonly"></textarea>
+              </div>
+              <div class="row">
+                <span class="col-sm-3">kRec:</span>
+                <textarea id="keyRecover-result" rows="1" cols="80" class="textarea-blue col-sm-9" onclick="selectAndCopy(this)" placeholder="kRec" readonly="readonly"></textarea>
+              </div>
+              <div class="row">
+                <span class="col-sm-3">kRev:</span>
+                <textarea id="keyRevoke-result" rows="1" cols="80" class="textarea-blue col-sm-9" onclick="selectAndCopy(this)" placeholder="kRev" readonly="readonly"></textarea>
+              </div>
+              <div class="row">
+                <span class="col-sm-3">idAddr:</span>
+                <textarea id="idaddr-result" rows="1" cols="80" class="textarea-blue col-sm-9" onclick="selectAndCopy(this)" placeholder="idAddr" readonly="readonly"></textarea>
+              </div>
+              <div class="row">
+                <span class="col-sm-3">proofKSign:</span>
+                <textarea id="proofClaimOperationalKey-result" rows="3" cols="80" class="textarea-blue col-sm-9" onclick="selectAndCopy(this)" placeholder="proof of ClaimAuthorizeOperationalKey" readonly="readonly"></textarea>
+              </div>
+              <br>
 
-          <h4>Assign name</h4>
-          <hr>
-          <input id="nameInput" class="form-control" type="text" placeholder="name" value="johndoe" style="width:150px; display:inline;"> @iden3.eth
-          <br>
+              <h4>Assign name</h4>
+              <hr>
+              <input id="nameInput" class="form-control" type="text" placeholder="name" value="johndoe" style="width:150px; display:inline;"> @iden3.eth
+              <br>
 
-          <a onclick="assignName()" class="btn btn-primary o_primary float-right">Assign Name</a>
-          <br><br>
+              <a onclick="assignName()" class="btn btn-primary o_primary float-right">Assign Name</a>
+              <br><br>
 
-          <textarea id="assignName-result" rows="3" cols="80" class="textarea-blue" onclick="selectAndCopy(this)" placeholder="proof of ClaimAssignName" readonly="readonly"></textarea>
-          <br>
+              <textarea id="assignName-result" rows="3" cols="80" class="textarea-blue" onclick="selectAndCopy(this)" placeholder="proof of ClaimAssignName" readonly="readonly"></textarea>
+            </div>
+            <div class="tab-pane fade" id="nav-backup" role="tabpanel" aria-labelledby="nav-backup-tab">
+              <h4>Backup</h4>
+              <hr>
+              <a onclick="exportBackup()" class="btn btn-primary o_primary float-right">Export Backup</a>
+              <p>Perform Wallet Backup</p>
 
+              <textarea id="exportedBackup" rows="3" cols="80" class="textarea-blue" onclick="selectAndCopy(this)" placeholder="exported backup" readonly="readonly"></textarea>
+              <!-- <input id="export-backup-passphrase" type="password" class="form-control" placeholder="backup encryption passphrase"> -->
 
+              <br><br>
+              <h4>Import</h4>
+              <hr>
+              <p>Import Wallet Backup</p>
+              <textarea id="masterSeed-input" rows="2" cols="80" class="textarea-blue" onclick="select(this)" placeholder="seed"></textarea>
+              <textarea id="importBackup" rows="3" cols="80" class="textarea-blue" onclick="select(this)" placeholder="import backup"></textarea>
+
+              <a onclick="importBackup()" class="btn btn-primary o_primary float-right">Import Backup</a>
+            </div>
+            <div class="tab-pane fade" id="nav-settings" role="tabpanel" aria-labelledby="nav-settings-tab">
+              <div onclick="appReset()" class="btn o_secundary">Hard reset</div>
+            </div>
+          </div>
         </div>
       </div>
       <br>
@@ -111,10 +125,9 @@
           <hr>
           <p class="card-text">Paste here the QR data to perform a login</p>
           <input id="qr-login-input" type="text" class="form-control" style="width:70%; display:inline;" placeholder="QR data">
-          <a onclick="login()" style="width:28%;"class="btn btn-primary o_primary float-right">Login</a>
+          <a onclick="login()" style="width:28%;" class="btn btn-primary o_primary float-right">Login</a>
           <br><br>
-          <textarea id="login-result" rows="2" cols="80" class="textarea-blue"
-            onclick="selectAndCopy(this)" placeholder="login data packet" readonly="readonly"></textarea>
+          <textarea id="login-result" rows="2" cols="80" class="textarea-blue" onclick="selectAndCopy(this)" placeholder="login data packet" readonly="readonly"></textarea>
           <br>
           <br>
           <h5 class="card-title">Sign data</h5>
@@ -162,27 +175,28 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="node_modules/toastr/build/toastr.min.js"></script>
   <script>
-  // color theme
-  let theme = localStorage.getItem("theme");
-  if (theme==="dark-theme") {
-    document.getElementById("themeSwitcher").checked = true;
-    document.body.className = theme;
-  }
-  function switchThemeClick() {
-    theme = localStorage.getItem("theme");
-    if (theme==="dark-theme") {
-      document.getElementById("themeSwitcher").checked = false;
-      theme = "light";
-      localStorage.setItem("theme", theme);
-    } else {
+    // color theme
+    let theme = localStorage.getItem("theme");
+    if (theme === "dark-theme") {
       document.getElementById("themeSwitcher").checked = true;
-      theme = "dark-theme";
-      localStorage.setItem("theme", theme);
+      document.body.className = theme;
     }
-    document.body.className = theme;
-  }
 
-  // toastr config
+    function switchThemeClick() {
+      theme = localStorage.getItem("theme");
+      if (theme === "dark-theme") {
+        document.getElementById("themeSwitcher").checked = false;
+        theme = "light";
+        localStorage.setItem("theme", theme);
+      } else {
+        document.getElementById("themeSwitcher").checked = true;
+        theme = "dark-theme";
+        localStorage.setItem("theme", theme);
+      }
+      document.body.className = theme;
+    }
+
+    // toastr config
     toastr.options = {
       "closeButton": false,
       "debug": false,
