--- a/index.html
+++ b/index.html
@@ -157,8 +157,23 @@
             <div class="tab-pane fade" id="nav-notifications" role="tabpanel" aria-labelledby="nav-notifications-tab">
               <h4>Notifications</h4>
               <hr>
-              <p id="notification-idAddress" style="text-align: center"></p>
-              <a onclick="sendNotifications()" style="margin-left: 37.5%; width:25%;" class="btn btn-primary o_primary">Send Notifications</a>
+              <!--<p id="notification-idAddress" style="text-align: center"></p>-->
+
+              <div class="input-group mb-2">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="basic-addon1">To:</span>
+                </div>
+                  <input type="text" class="form-control" id="notification-idAddress" placeholder="id address">
+              </div>
+
+              <div class="input-group mb-2">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">Content:</span>
+                </div>
+                <textarea class="form-control" id="notification-content" placeholder="notification msg"></textarea>
+              </div>
+
+              <a onclick="sendNotifications()" class="btn btn-primary o_primary float-right">Send Notifications</a>
               <br><br>
               <p style="text-align: center">Notifications available</p>
               <textarea id="notifications-list" rows="3" cols="80" class="textarea-blue" placeholder="List of notifications" readonly="readonly"></textarea>
@@ -196,6 +211,7 @@
           <br><br>
 
           <textarea id="assignName-result" rows="3" cols="80" class="textarea-blue" onclick="selectAndCopy(this)" placeholder="proof of ClaimAssignName" readonly="readonly"></textarea>
+          <br>
           <h5 class="card-title">Login</h5>
           <hr>
           <p class="card-text">Paste here the QR data to perform a login</p>
@@ -203,7 +219,6 @@
           <a onclick="login()" style="width:28%;" class="btn btn-primary o_primary float-right">Login</a>
           <br><br>
           <textarea id="login-result" rows="2" cols="80" class="textarea-blue" onclick="selectAndCopy(this)" placeholder="login data packet" readonly="readonly"></textarea>
-          <br>
           <br>
           <h5 class="card-title">Sign data</h5>
           <hr>
