--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text" style="width: 9rem;">Relay URL:</span>
                 </div>
-                <input type="text" class="form-control" id="relay-url" value="http://127.0.0.1:8000/api/unstable">
+                <input type="text" class="form-control" id="relay-url">
               </div>
               <div class="input-group mb-2">
                 <div class="input-group-prepend">
@@ -66,7 +66,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text" style="width: 9rem;">Name S. URL:</span>
                 </div>
-                <input type="text" class="form-control" id="name-server-url" value="http://127.0.0.1:7000/api/unstable">
+                <input type="text" class="form-control" id="name-server-url">
               </div>
               <div class="input-group mb-2">
                 <div class="input-group-prepend">
@@ -78,13 +78,13 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text" style="width: 9rem;">Notif. S. URL:</span>
                 </div>
-                <input type="text" class="form-control" id="notification-server-url" value="http://127.0.0.1:10000/api/unstable">
+                <input type="text" class="form-control" id="notification-server-url">
               </div>
               <div class="input-group mb-2">
                 <div class="input-group-prepend">
-                  <span class="input-group-text">Backup S. URL:</span>
+                  <span class="input-group-text" style="width: 9rem;">Backup S. URL:</span>
                 </div>
-                <input type="text" class="form-control" id="backup-server-url" value="http://127.0.0.1:5000/api/unstable">
+                <input type="text" class="form-control" id="backup-server-url">
               </div>
 
               <a onclick="loadServers()" class="btn btn-primary o_primary float-right mb-4">Load Servers</a>
@@ -234,10 +234,10 @@
               </div>
 
               <div class="text-right mb-2">
-                <a onclick="getNotifications()" class="btn btn-primary o_primary">Get Notifications</a>
+                <a onclick="getNotificationsToaster()" class="btn btn-primary o_primary">Get Notifications</a>
               </div>
 
-              <div class="card mb-4">
+              <div class="card mb-2">
                 <div class="card-body p-3">
                   <nav>
                     <div class="list-group list-group-flush p-1" id="notification-recv-list" style="overflow-y:scroll; height:10rem;">
@@ -245,6 +245,17 @@
                   </nav>
                 </div>
               </div>
+              <div class="input-group mb-2">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">Interval:</span>
+                </div>
+                <input id="notification-check-seconds" class="form-control" value="30">
+                <div class="input-group-append">
+                  <span class="input-group-text">seconds</span>
+                </div>
+              </div>
+              <input id="notification-background" onclick="toggleNotificationsBackground()" type="checkbox">
+              Toggle background notifications
 
               <!--
               <div class="mb-4">
